Closed
Bug 1397711
Opened 8 years ago
Closed 8 years ago
Crash when invoking nsDOMWindowUtils::DispatchDOMEventViaPresShell with a script-created keypress event
Categories
(Core :: DOM: Events, defect)
Core
DOM: Events
Tracking
()
RESOLVED
FIXED
mozilla57
People
(Reporter: xidorn, Assigned: xidorn)
References
Details
Crash Data
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
masayuki
:
review+
gchang
:
approval-mozilla-beta+
jcristau
:
approval-mozilla-release-
|
Details |
This causes some issue with old extensions, see https://github.com/willsALMANJ/pentadactyl-signed/issues/4
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → xidorn+moz
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 2•8 years ago
|
||
Note that the same null-check presents in the original callsite of PostHandleKeyEvent: https://searchfox.org/mozilla-central/rev/67f38de2443e6b613d874fcf4d2cd1f2fc3d5e97/dom/ipc/TabParent.cpp#2228-2231
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8905472 [details]
Bug 1397711 - Null-check widget of keyboard event before invoking its PostHandleKeyEvent.
https://reviewboard.mozilla.org/r/177282/#review182332
Nice.
Attachment #8905472 -
Flags: review?(masayuki) → review+
Pushed by xquan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/385a77f98b68
Null-check widget of keyboard event before invoking its PostHandleKeyEvent. r=masayuki
Comment 5•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
| Assignee | ||
Comment 6•8 years ago
|
||
Comment on attachment 8905472 [details]
Bug 1397711 - Null-check widget of keyboard event before invoking its PostHandleKeyEvent.
Approval Request Comment
[Feature/Bug causing the regression]: bug 429824
[User impact if declined]: Reliably crash with some extensions, see willsALMANJ/pentadactyl-signed#4
[Is this code covered by automated tests?]: yes
[Has the fix been verified in Nightly?]: just landed
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: just add a null-check
[String changes made/needed]: n/a
Attachment #8905472 -
Flags: approval-mozilla-release?
Attachment #8905472 -
Flags: approval-mozilla-beta?
Updated•8 years ago
|
status-firefox56:
--- → affected
Comment 7•8 years ago
|
||
Comment on attachment 8905472 [details]
Bug 1397711 - Null-check widget of keyboard event before invoking its PostHandleKeyEvent.
Add a null check. Should be low risk. Beta56+.
Attachment #8905472 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•8 years ago
|
||
| bugherder uplift | ||
Flags: in-testsuite+
Comment 9•8 years ago
|
||
Comment on attachment 8905472 [details]
Bug 1397711 - Null-check widget of keyboard event before invoking its PostHandleKeyEvent.
m-r is about to become 56, so this is wontfix for 55.
Attachment #8905472 -
Flags: approval-mozilla-release? → approval-mozilla-release-
You need to log in
before you can comment on or make changes to this bug.
Description
•