Bug 1397711 - Null-check widget of keyboard event before invoking its PostHandleKeyEvent. r=masayuki, a=gchang

MozReview-Commit-ID: KTniEBMvw9q